--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
-  "name": "gulp-sass",
+  "name": "intro-to-gulp-sass",
   "version": "1.0.0",
-  "description": "",
   "main": "gulp.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "sid jacobs",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-es2015": "^6.18.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "gulp-cachebust": "^0.0.6",
+    "gulp-babel": "^6.1.2",
+    "gulp-cachebust": "0.0.6",
+    "gulp-concat": "^2.6.1",
+    "gulp-print": "^2.0.1",
     "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^2.2.0"
-  }
+    "gulp-sourcemaps": "^2.2.1",
+    "gulp-uglify": "^2.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/matthewsidneyjacobs/intro-gulp-sass-starter.git"
+  },
+  "bugs": {
+    "url": "https://github.com/matthewsidneyjacobs/intro-gulp-sass-starter/issues"
+  },
+  "homepage": "https://github.com/matthewsidneyjacobs/intro-gulp-sass-starter#readme",
+  "description": ""
 }
